--- a/package.json
+++ b/package.json
@@ -15,7 +15,14 @@
     "health:node-abi": "node -p \"process.versions.node + ' ABI ' + process.versions.modules\"",
     "prepare": "chmod +x ./bin/promethean.js",
     "lint": "biome lint --config-path=biome.json .",
-    "format": "biome format --config-path=biome.json --write ."
+    "format": "biome format --config-path=biome.json --write .",
+    "doc:01-frontmatter": "tsx packages/docops/src/01-frontmatter.ts --dir docs/unique --gen-model qwen3:4b",
+    "doc:02-embed": "tsx packages/docops/src/02-embed.ts --dir docs/unique",
+    "doc:03-query": "tsx packages/docops/src/03-query.ts",
+    "doc:04-relate": "tsx packages/docops/src/04-relations.ts --docs-dir docs/unique --doc-threshold 0.78 --ref-threshold 0.85",
+    "doc:05-footers": "tsx packages/docops/src/05-footers.ts --dir docs/unique --anchor-style block",
+    "doc:06-rename": "tsx packages/docops/src/06-rename.ts --dir docs/unique",
+    "doc:all": "pnpm doc:01-frontmatter && pnpm doc:02-embed && pnpm doc:03-query && pnpm doc:04-relate && pnpm doc:05-footers && pnpm doc:06-rename"
   },
   "bin": {
     "prom": "./bin/promethean.js"
