--- a/packages/docops/package.json
+++ b/packages/docops/package.json
@@ -1,12 +1,20 @@
 {
- "name": "@promethean/docops",
- "scripts": {
-  "doc:01-frontmatter": "tsx packages/docops/src/01-frontmatter.ts --dir docs/unique --gen-model qwen3:4b",
-  "doc:02-embed": "tsx packages/docops/src/02-embed.ts --dir docs/unique",
-  "doc:03-query": "tsx packages/docops/src/03-query.ts",
-  "doc:04-relate": "tsx packages/docops/src/04-relations.ts --docs-dir docs/unique --doc-threshold 0.78 --ref-threshold 0.85",
-  "doc:05-footers": "tsx packages/docops/src/05-footers.ts --dir docs/unique --anchor-style block",
-  "doc:06-rename": "tsx packages/docops/src/06-rename.ts --dir docs/unique",
-  "doc:all": "pnpm doc:01-frontmatter && pnpm doc:02-embed && pnpm doc:03-query && pnpm doc:04-relate && pnpm doc:05-footers && pnpm doc:06-rename"
- }
+  "name": "@promethean/docops",
+  "scripts": {
+    "doc:01-frontmatter": "tsx ./src/01-frontmatter.ts --dir docs/unique --gen-model qwen3:4b",
+    "doc:02-embed": "tsx ./src/02-embed.ts --dir docs/unique",
+    "doc:03-query": "tsx ./src/03-query.ts",
+    "doc:04-relate": "tsx ./src/04-relations.ts --docs-dir docs/unique --doc-threshold 0.78 --ref-threshold 0.85",
+    "doc:05-footers": "tsx ./src/05-footers.ts --dir docs/unique --anchor-style block",
+    "doc:06-rename": "tsx ./src/06-rename.ts --dir docs/unique",
+    "doc:all": "pnpm doc:01-frontmatter && pnpm doc:02-embed && pnpm doc:03-query && pnpm doc:04-relate && pnpm doc:05-footers && pnpm doc:06-rename"
+  },
+  "dependencies": {
+    "gray-matter": "^4.0.3",
+    "remark-parse": "^11.0.0",
+    "unified": "^11.0.5",
+    "unist-util-visit": "^5.0.0",
+    "yaml": "^2.8.1",
+    "zod": "^4.1.5"
+  }
 }
