--- a/packages/compiler/tsconfig.json
+++ b/packages/compiler/tsconfig.json
@@ -4,7 +4,11 @@
         "rootDir": "src",
         "outDir": "dist",
         "composite": true,
-        "declaration": true
+        "declaration": true,
+        "exactOptionalPropertyTypes": false,
+        "noUncheckedIndexedAccess": false,
+        "noUnusedLocals": false,
+        "noUnusedParameters": false
     },
     "include": ["src/**/*"],
     "references": []
