--- a/packages/piper/package.json
+++ b/packages/piper/package.json
@@ -15,7 +15,8 @@
     "chokidar": "^3.6.0",
     "globby": "^14.0.2",
     "yaml": "^2.5.0",
-    "zod": "^3.23.8"
+    "zod": "^3.23.8",
+    "@promethean/level-cache": "link:../level-cache"
   },
   "devDependencies": {
     "tsx": "^4.19.2",
