--- a/packages/cephalon-discord/package.json
+++ b/packages/cephalon-discord/package.json
@@ -7,11 +7,10 @@
     "start": "node --enable-source-maps --experimental-specifier-resolution=node ./src/index.ts",
     "test": "ava --config ../../../config/ava.config.mjs tests/smoke.test.js",
     "coverage": "c8 ava --config ../../../config/ava.config.mjs tests/smoke.test.js",
-    "build": "echo 'ts-run direct'",
+    "build": "tsc .",
     "lint": "pnpm exec @biomejs/biome lint . || true"
   },
   "dependencies": {
-    
     "@types/node": "^24.3.0",
     "typescript": "^5.9.2"
   },
