--- a/packages/discord-attachment-indexer/package.json
+++ b/packages/discord-attachment-indexer/package.json
@@ -7,7 +7,7 @@
     "start": "node --enable-source-maps --experimental-specifier-resolution=node ./src/index.ts",
     "test": "ava --config ../../../config/ava.config.mjs",
     "coverage": "c8 ava --config ../../../config/ava.config.mjs",
-    "build": "echo 'ts-run direct'",
+    "build": "tsc",
     "lint": "pnpm exec @biomejs/biome lint . || true"
   },
   "dependencies": {
