--- a/packages/discord-gateway/package.json
+++ b/packages/discord-gateway/package.json
@@ -7,7 +7,7 @@
     "start": "node --enable-source-maps --experimental-specifier-resolution=node ./src/index.ts",
     "test": "ava",
     "coverage": "c8 ava",
-    "build": "echo 'ts-run direct'",
+    "build": "tsc .",
     "lint": "pnpm exec @biomejs/biome lint . || true"
   },
   "dependencies": {
