--- a/packages/discord-attachment-indexer/tsconfig.json
+++ b/packages/discord-attachment-indexer/tsconfig.json
@@ -1,5 +1,9 @@
 {
   "extends": "../../config/tsconfig.service.json",
+  "compilerOptions": {
+    "outDir": "dist",
+    "rootDir": "src"
+  },
   "include": ["src/**/*.ts", "tests/**/*.ts"],
   "exclude": ["node_modules"]
 }
