--- a/package.json
+++ b/package.json
@@ -28,8 +28,7 @@
     "prom": "./bin/promethean.js"
   },
   "dependencies": {
-    "@promethean/legacy": "workspace:*",
-    "@shared/sibilant": "file:shared/sibilant",
+    "@promethean/legacy": "file:packages/legacy",
     "@promethean/piper": "file:packages/piper",
     "@types/node": "^24.3.0",
     "adm-zip": "0.5.16",
