--- a/packages/piper/package.json
+++ b/packages/piper/package.json
@@ -21,7 +21,7 @@
     "globby": "^14.0.2",
     "yaml": "^2.5.0",
     "zod": "^3.23.8",
-    "@promethean/level-cache": "workspace:*",
+    "@promethean/level-cache": "workspace:*"
   },
   "devDependencies": {
     "tsx": "^4.19.2",
