--- a/packages/level-cache/tsconfig.json
+++ b/packages/level-cache/tsconfig.json
@@ -3,6 +3,7 @@
   "compilerOptions": {
     "outDir": "dist",
     "declaration": true,
+    "composite": true,
     "rootDir": "src"
   },
   "include": ["src"]
