--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,7 +1,14 @@
 {
   "extends": "./config/tsconfig.base.json",
   "files": [],
+
   "references": [
+    {
+      "path": "packages/level-cache"
+    },
+    {
+      "path": "packages/piper"
+    },
     {
       "path": "./packages/agent"
     },
