--- a/packages/level-cache/tsconfig.json
+++ b/packages/level-cache/tsconfig.json
@@ -6,5 +6,6 @@
     "composite": true,
     "rootDir": "src"
   },
-  "include": ["src/**.ts"]
+  "include": ["src/**.ts"],
+  "exclude": ["node_modules"]
 }
