--- a/packages/piper/tsconfig.json
+++ b/packages/piper/tsconfig.json
@@ -1,5 +1,5 @@
 {
-  "extends": "../../config/tsconfig.base.json",
+  "extends": "../../tsconfig.json",
   "compilerOptions": {
     "rootDir": "src",
     "outDir": "dist",
@@ -7,5 +7,5 @@
     "declaration": true
   },
   "include": ["src/**/*"],
-  "references": [{"path":"../level-cache"}]
+  "references": [{ "path": "../level-cache" }]
 }
