--- a/packages/level-cache/tsconfig.json
+++ b/packages/level-cache/tsconfig.json
@@ -6,6 +6,6 @@
     "composite": true,
     "rootDir": "src"
   },
-  "include": ["src/**.ts"],
-  "exclude": ["node_modules"]
+  "include": ["src/**/*.ts"],
+  "exclude": ["node_modules/**"]
 }
