--- a/config/tsconfig.base.json
+++ b/config/tsconfig.base.json
@@ -1,17 +1,23 @@
 {
   "$schema": "https://json.schemastore.org/tsconfig.json",
-  "extends": "../tsconfig.base.json",
   "compilerOptions": {
-    "module": "ESNext",
-    "moduleResolution": "Bundler",
+    "target": "esnext",
+    "module": "nodenext",
+    "moduleResolution": "nodenext",
+    "strict": true,
+    "esModuleInterop": true,
+    "forceConsistentCasingInFileNames": true,
+    "skipLibCheck": true,
+    "declaration": true,
+    "declarationMap": true,
+    "importHelpers": false,
+    "newLine": "lf",
+    "noEmitHelpers": true,
+    "removeComments": false,
+    "sourceMap": true,
     "allowSyntheticDefaultImports": true,
     "esModuleInterop": true,
-    "resolveJsonModule": true,
-    "resolvePackageJsonExports": true,
-    "resolvePackageJsonImports": true,
-    "paths": {
-      "@shared/ts/*": ["../shared/ts/dist/*"]
-    },
+    "types": ["node", "ava"],
     "lib": ["ES2022", "esnext.disposable"]
   },
   "types": ["node", "ava"],
