--- a/packages/cephalon/package.json
+++ b/packages/cephalon/package.json
@@ -25,7 +25,7 @@
     "dj"
   ],
   "author": "Amish Shah <amishshah.2k@gmail.com>",
-  "license": "UNLICENSE",
+  "license": "GPL-3.0-only",
   "dependencies": {
     "@chroma-core/ollama": "^0.1.7",
     "@discordjs/opus": "^0.10.0",
