--- a/package.json
+++ b/package.json
@@ -37,6 +37,8 @@
     "http-proxy": "1.18.1",
     "mongodb": "6.18.0",
     "pm2": "6.0.8",
+    "uuid": "^11.1.0",
+    "zod-to-json-schema": "^3.24.6",
     "remark-parse": "^11.0.0",
     "unified": "^11.0.5",
     "unist-util-visit": "^5.0.0",
@@ -48,6 +50,8 @@
     "@biomejs/biome": "^2.2.2",
     "@types/jest": "30.0.0",
     "@types/mongodb": "4.0.6",
+    "@types/uuid": "^9.0.7",
+    "@types/ws": "^8.5.10",
     "@typescript-eslint/eslint-plugin": "8.39.0",
     "@typescript-eslint/parser": "8.39.0",
     "ava": "6.4.1",
