--- a/packages/markdown/package.json
+++ b/packages/markdown/package.json
@@ -62,6 +62,7 @@
         "@types/express": "^4.17.21",
         "@types/node": "^20.19.11",
         "@types/ws": "^8.5.9",
+        "@types/uuid": "^9.0.7",
         "acorn": "^8.15.0",
         "rimraf": "^6.0.1",
         "ts-node": "^10.9.2",
