feat: implement simple OAuth routes using Fastify
* Added new `registerSimpleOAuthRoutes` function to register basic OAuth routes
* Implemented health check endpoint for OAuth system
* Created endpoints for listing available providers and initiating OAuth login
* Added support for storing verifier and challenge in temporary storage
* Implemented OAuth callback endpoint for exchanging code for tokens

--- a/packages/mcp/package.json
+++ b/packages/mcp/package.json
@@ -39,10 +39,10 @@
   },
   "dependencies": {
     "@fastify/cors": "^10.0.1",
+    "@fastify/cookie": "^9.2.0",
     "@fastify/static": "^7.0.4",
     "@modelcontextprotocol/sdk": "^1.17.5",
     "@promethean/discord": "workspace:*",
-
     "@promethean/kanban": "workspace:*",
     "@stryker-mutator/core": "^8.7.1",
     "bcryptjs": "^2.4.3",
