fix: remove unused imports and simplify nlp module
- remove redundant NaturalLanguageCommandParser export
- simplify type exports to match current usage
- remove unused AgentOSCommandExecutor from exports
- update tsconfig to ensure correct source inclusion

--- a/packages/agents/agent/tsconfig.json
+++ b/packages/agents/agent/tsconfig.json
@@ -6,6 +6,5 @@
         "composite": true,
         "declaration": true
     },
-    "include": ["src/**/*"],
-    "references": [{ "path": "../security" }]
+    "include": ["src/**/*"]
 }
