fix agent context description: clarify state vs conversation context,...
- update description to emphasize state management, not conversation context
- specify that @promethean/persistence handles conversation context
- rename legacy state manager to indicate deprecation

--- a/packages/agents/agent-context/package.json
+++ b/packages/agents/agent-context/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@promethean/agent-context",
   "version": "1.0.0",
-  "description": "Agent OS Context Management System with event sourcing and snapshots",
+  "description": "Agent STATE Management System with event sourcing and snapshots (not conversation context - use @promethean/persistence for that)",
   "type": "module",
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
