--- a/packages/mcp/package.json
+++ b/packages/mcp/package.json
@@ -38,14 +38,15 @@
     "proxy": "tsx src/bin/proxy.ts"
   },
   "dependencies": {
-    "@fastify/cors": "^10.0.1",
     "@fastify/cookie": "^9.2.0",
+    "@fastify/cors": "^10.0.1",
     "@fastify/static": "^7.0.4",
     "@modelcontextprotocol/sdk": "^1.17.5",
     "@promethean/discord": "workspace:*",
     "@promethean/kanban": "workspace:*",
     "@stryker-mutator/core": "^8.7.1",
     "bcryptjs": "^2.4.3",
+    "dotenv": "^17.2.3",
     "fast-check": "^3.23.2",
     "fastify": "5.0.0",
     "fflate": "^0.8.2",
