refactor(pantheon-core): extract core modules from pantheon, update d...
- rename pantheon → pantheon-core in source files and package.json
- update dependency references to use @promethean/pantheon-core
- fix URL canonicalization and hash generation to use correct module paths and URL result
- update TypeScript version and dependency snapshots to reflect new package structure
- improve error handling and consistency in persistence adapter logic

--- a/packages/pantheon-core/package.json
+++ b/packages/pantheon-core/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@promethean/pantheon",
+  "name": "@promethean/pantheon-core",
   "version": "1.0.0",
   "description": "Pantheon Agent Management Framework — Core functional library for actors, behaviors, context, and orchestration",
   "type": "module",
