--- a/packages/agent-state/package.json
+++ b/packages/agent-state/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "@promethean/agent-context",
+  "name": "@promethean/agent-state",
   "version": "1.0.0",
-  "description": "Agent STATE Management System with event sourcing and snapshots (not conversation context - use @promethean/persistence for that)",
+  "description": "Agent STATE Management System with functional façade for event sourcing and snapshots (not conversation context - use @promethean/persistence for that)",
   "type": "module",
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
