refactor(agent-state): add actor state port and update context state ...
- introduce ActorStatePort and Actor, ActorScript types in state exports
- store actor state in context state for persistence
- update context manager to handle state updates with full state structure
- update imports across agent packages to use @promethean/agent-state instead of @promethean/agent-context

--- a/packages/agents/agent-protocol/package.json
+++ b/packages/agents/agent-protocol/package.json
@@ -12,7 +12,7 @@
     "typecheck": "tsc --noEmit"
   },
   "dependencies": {
-    "@promethean/agent-context": "workspace:*",
+    "@promethean/agent-state": "workspace:*",
     "amqplib": "^0.10.3",
     "ws": "^8.14.2",
     "uuid": "^9.0.1",
