--- a/packages/ai/nl-parser/package.json
+++ b/packages/ai/nl-parser/package.json
@@ -12,7 +12,7 @@
     "typecheck": "tsc --noEmit"
   },
   "dependencies": {
-    "@promethean/agent-context": "workspace:*",
+    "@promethean/agent-state": "workspace:*",
     "@nlpjs/basic": "^4.27.0",
     "jsonwebtoken": "^9.0.2",
     "uuid": "^9.0.1",
