--- a/packages/pantheon-core/package.json
+++ b/packages/pantheon-core/package.json
@@ -34,6 +34,6 @@
   },
   "peerDependencies": {
     "@promethean/persistence": "workspace:*",
-    "@promethean/agent-context": "workspace:*"
+    "@promethean/agent-state": "workspace:*"
   }
 }
