fix package name consistency: update pantheon to use fp suffix
- aligns package name with feature prefix convention
- ensures consistency across project modules
- improves discoverability and versioning clarity

--- a/packages/pantheon/package.json
+++ b/packages/pantheon/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@promethean/pantheon",
+  "name": "@promethean/pantheon-fp",
   "version": "0.0.1",
   "description": "Pantheon Agent Management Framework",
   "main": "dist/index.js",
