add Lisp DSL implementation epic with core tasks and success metrics
- define DSL design, parser, runtime, and interop layers
- establish business value and success metrics for actor script development
- outline tasks from design to performance optimization and testing
- ensure seamless TypeScript-Clojure integration and developer tooling

--- a/packages/pantheon/package.json
+++ b/packages/pantheon/package.json
@@ -12,7 +12,8 @@
     "typecheck": "tsc --noEmit"
   },
   "dependencies": {
-    "commander": "^11.1.0"
+    "commander": "^11.1.0",
+    "@promethean/agent-state": "workspace:*"
   },
   "devDependencies": {
     "@types/node": "^20.0.0",
