--- a/packages/pantheon-mcp/package.json
+++ b/packages/pantheon-mcp/package.json
@@ -5,6 +5,12 @@
   "main": "dist/index.js",
   "module": "dist/index.js",
   "type": "module",
+  "exports": {
+    ".": {
+      "types": "./dist/index.d.ts",
+      "import": "./dist/index.js"
+    }
+  },
   "scripts": {
     "build": "tsc",
     "clean": "rm -rf dist",
