add ollama command support and adapter system for pantheon actors

--- a/packages/pantheon/package.json
+++ b/packages/pantheon/package.json
@@ -1,25 +1,57 @@
 {
-  "name": "@promethean/pantheon-fp",
-  "version": "0.0.1",
-  "description": "Pantheon Agent Management Framework",
-  "main": "dist/index.js",
-  "module": "dist/index.js",
+  "name": "@promethean/pantheon",
+  "version": "1.0.0",
+  "description": "Pantheon Agent Management Framework — Complete framework with CLI, UI, and adapters",
   "type": "module",
+  "main": "dist/index.js",
+  "types": "dist/index.d.ts",
+  "exports": {
+    ".": {
+      "types": "./dist/index.d.ts",
+      "import": "./dist/index.js"
+    },
+    "./core": {
+      "types": "./dist/core/index.d.ts",
+      "import": "./dist/core/index.js"
+    },
+    "./adapters": {
+      "types": "./dist/adapters/index.d.ts",
+      "import": "./dist/adapters/index.js"
+    },
+    "./cli": {
+      "types": "./dist/cli/index.d.ts",
+      "import": "./dist/cli/index.js"
+    },
+    "./dist/*": "./dist/*",
+    "./*": "./dist/*"
+  },
+  "files": [
+    "dist"
+  ],
   "scripts": {
     "build": "tsc",
     "clean": "rm -rf dist",
+    "dev": "tsc --watch",
+    "typecheck": "tsc --noEmit",
     "test": "ava",
-    "typecheck": "tsc --noEmit"
+    "lint": "pnpm exec eslint ."
   },
   "dependencies": {
+    "@promethean/pantheon-core": "workspace:*",
+    "@promethean/pantheon-persistence": "workspace:*",
+    "@promethean/pantheon-mcp": "workspace:*",
+    "@promethean/pantheon-llm-openai": "workspace:*",
     "commander": "^11.1.0",
-    "@promethean/agent-state": "workspace:*",
-    "@promethean/pantheon-mcp": "workspace:*"
+    "zod": "^3.22.4"
   },
   "devDependencies": {
     "@types/node": "^20.0.0",
-    "ava": "^5.0.0",
-    "typescript": "^5.0.0"
+    "ava": "^5.3.1",
+    "typescript": "^5.3.3"
+  },
+  "peerDependencies": {
+    "@promethean/persistence": "workspace:*",
+    "@promethean/agent-state": "workspace:*"
   },
   "license": "GPL-3.0",
   "engines": {
