fix: mock task creation and update dependencies for pantheon-core
- replace agent task manager with mock task object in create task command
- update package.json to reference pantheon-core instead of pantheon-fp
- upgrade @types/node to 24.3.1 and typescript to 5.9.3
- add new workspace packages: pantheon-core, pantheon-llm-openai, pantheon-persistence, persistence
- update ts-node to 10.9.2 with node 24.3.1 support
- remove optional undici-types snapshot due to deprecation

--- a/packages/pantheon-mcp/package.json
+++ b/packages/pantheon-mcp/package.json
@@ -18,7 +18,7 @@
     "typecheck": "tsc --noEmit"
   },
   "dependencies": {
-    "@promethean/pantheon-fp": "workspace:*"
+    "@promethean/pantheon-core": "workspace:*"
   },
   "devDependencies": {
     "@types/node": "^20.0.0",
