--- a/packages/pantheon-ui/package.json
+++ b/packages/pantheon-ui/package.json
@@ -52,7 +52,12 @@
     "tailwindcss": "^3.3.0",
     "autoprefixer": "^10.4.0",
     "postcss": "^8.4.0",
-    "@types/node": "^20.0.0"
+    "@types/node": "^20.0.0",
+    "@tanstack/react-query-devtools": "^5.0.0",
+    "react-hot-toast": "^2.4.0",
+    "socket.io-client": "^4.7.0",
+    "recharts": "^2.8.0",
+    "remark-gfm": "^4.0.0"
   },
   "license": "GPL-3.0",
   "engines": {
