fix package name inconsistency: update @promethean/pantheon to @prome...
- aligns package name with CLJS-specific implementation
- resolves naming mismatch in agent registry
- ensures correct module identification in dependency graph

--- a/packages/agents/pantheon/package.json
+++ b/packages/agents/pantheon/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@promethean/pantheon",
+  "name": "@promethean/pantheon-cljs",
   "version": "1.0.0",
   "description": "Promethean Pantheon - Unified Agent Framework consolidating context management, orchestration, protocols, and workflow systems",
   "type": "module",
