feat(ops): add OpenCode client integration and update licenses to GPL...
- Integrate OpenCode API client with environment-based config and auth headers
- Update all package.json files to use GPL-3.0-only license
- Improve session creation flow with direct client interaction and data parsing

--- a/packages/pantheon/package.json
+++ b/packages/pantheon/package.json
@@ -53,7 +53,7 @@
     "@promethean/persistence": "workspace:*",
     "@promethean/agent-state": "workspace:*"
   },
-  "license": "GPL-3.0",
+  "license": "GPL-3.0-only",
   "engines": {
     "node": ">=18.0.0"
   }
