--- a/packages/pantheon-core/package.json
+++ b/packages/pantheon-core/package.json
@@ -32,6 +32,10 @@
     "ava": "^5.3.1",
     "typescript": "^5.3.3"
   },
+  "license": "GPL-3.0-only",
+  "engines": {
+    "node": ">=22.0.0"
+  },
   "peerDependencies": {
     "@promethean/persistence": "workspace:*",
     "@promethean/agent-state": "workspace:*"
