--- a/packages/pantheon-mcp/package.json
+++ b/packages/pantheon-mcp/package.json
@@ -25,7 +25,7 @@
     "ava": "^5.0.0",
     "typescript": "^5.0.0"
   },
-  "license": "GPL-3.0",
+  "license": "GPL-3.0-only",
   "engines": {
     "node": ">=18.0.0"
   }
