--- a/packages/pantheon-ui/package.json
+++ b/packages/pantheon-ui/package.json
@@ -59,7 +59,7 @@
     "recharts": "^2.8.0",
     "remark-gfm": "^4.0.0"
   },
-  "license": "GPL-3.0",
+  "license": "GPL-3.0-only",
   "engines": {
     "node": ">=18.0.0"
   }
