--- a/package.json
+++ b/package.json
@@ -134,6 +134,7 @@
     "dotenv": "17.2.1",
     "gray-matter": "4.0.3",
     "http-proxy": "1.18.1",
+    "mcp-auth": "^0.1.1",
     "mongodb": "6.18.0",
     "nbb": "^1.3.204",
     "nx-cloud": "^19.1.0",
