--- a/packages/chat-ui/package.json
+++ b/packages/chat-ui/package.json
@@ -14,21 +14,19 @@
     "start": "concurrently \"npm run api\" \"npm run dev\""
   },
   "dependencies": {
-    "@promethean/database": "workspace:*",
-    "@promethean/opencode-client": "workspace:*",
+    "cors": "^2.8.5",
     "express": "^4.18.2",
-    "cors": "^2.8.5"
+    "scheduler": "^0.27.0"
   },
   "devDependencies": {
-    "shadow-cljs": "^2.25.8",
-    "thheller/shadow-cljs": "^2.25.8",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-    "@types/express": "^4.17.17",
     "@types/cors": "^2.8.13",
-    "typescript": "^5.0.0",
+    "@types/express": "^4.17.17",
+    "concurrently": "^8.2.0",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1",
+    "shadow-cljs": "^2.25.8",
     "ts-node": "^10.9.0",
-    "concurrently": "^8.2.0"
+    "typescript": "^5.0.0"
   },
   "shadow-cljs": {
     "source-paths": [
