--- a/packages/chat-ui/package.json
+++ b/packages/chat-ui/package.json
@@ -14,6 +14,7 @@
     "start": "concurrently \"npm run api\" \"npm run dev\""
   },
   "dependencies": {
+    "@promethean/persistence": "workspace:*",
     "cors": "^2.8.5",
     "express": "^4.18.2",
     "scheduler": "^0.27.0"
