feat(chat-ui): add session and message stores with dual store manager...
- Introduce sessionStore, eventStore, and messageStore using DualStoreManager
- Implement collection initialization and error handling for existing collections
- Add type safety with SessionData and StoreSession interfaces
- Refactor data parsing and conversion to match opencode-client format
- Enable real-time session and message retrieval with proper error fallbacks

--- a/packages/file-system/indexer-client/tsconfig.json
+++ b/packages/file-system/indexer-client/tsconfig.json
@@ -8,8 +8,8 @@
     "baseUrl": ".",
     "skipLibCheck": true,
     "paths": {
-      "@promethean/indexer-core": ["../indexer-core/dist/index"],
-      "@promethean/indexer-core/*": ["../indexer-core/dist/*"]
+      "@promethean/file-indexer-service": ["../file-indexer-service/dist/index"],
+      "@promethean/file-indexer-service/*": ["../file-indexer-service/dist/*"]
     }
   },
   "include": ["src/**/*"],
