fix(indexer-state): update state with new scan results and improve fi...
- update lastIndexedSessionId and lastIndexedMessageId in .indexer-state.json
- replace @promethean/file-indexer with @promethean/file-indexer-service
- add scanFiles utility with content reading, progress tracking, and batch processing
- improve file scanning with better error handling and progress callbacks

--- a/packages/pipelines/simtask/package.json
+++ b/packages/pipelines/simtask/package.json
@@ -26,7 +26,7 @@
     "gray-matter": "^4.0.3",
     "yaml": "^2.5.0",
     "zod": "^3.23.8",
-    "@promethean/file-indexer": "workspace:*"
+    "@promethean/file-indexer-service": "workspace:*"
   },
   "devDependencies": {
     "tsx": "^4.19.2"
