--- a/packages/pipelines/docops/package.json
+++ b/packages/pipelines/docops/package.json
@@ -18,7 +18,7 @@
     "@fastify/static": "^8.2.0",
     "@fastify/websocket": "^11.2.0",
     "@promethean/docops-frontend": "workspace:*",
-    "@promethean/file-indexer": "workspace:*",
+    "@promethean/file-indexer-service": "workspace:*",
     "@promethean/fs": "workspace:*",
     "@promethean/markdown": "workspace:*",
     "@promethean/utils": "workspace:*",
