add centralized data-stores package with unified store management and...
- Introduce @promethean/data-stores as a centralized data store manager
- Provide functional architecture with type-safe, composable store operations
- Enable cross-store search and unified context management
- Support for openCode and file system stores with shared configurations
- Add tests and package structure for maintainable, testable implementation

--- a/packages/data-stores/tsconfig.json
+++ b/packages/data-stores/tsconfig.json
@@ -5,5 +5,5 @@
     "rootDir": "./src"
   },
   "include": ["src/**/*"],
-  "exclude": ["dist", "node_modules", "src/tests"]
+  "exclude": ["dist", "node_modules"]
 }
